----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-04-07 Marcel Tschopp <marcel.tschopp@gmx.net>
    * multi_submits.inc.php, lang/german: bug 930714, wrong spelling and 
      query display. Thanks to Daniel Marschall (blackdrake)

2004-04-07 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php, bug 931034, big numbers data entry,
      thanks to Dmitry (yrtimd)
    * tbl_row_delete.php, libraries/display_tbl.lib.php: bug 921939,
      problem with multi-row delete and quotes in WHERE clause,
      thanks to Ryan Schmidt (ryandesign)

2004-04-06 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php, complete the fix for bug 922054

2004-04-04 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/polish: Updated, thanks to Jakub Wilk (ubanus).
    * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).
    * lang/malay: updated, thanks to nobody
    * lang/lithuanian: Updated, thanks to Vilius Zigmantas (viliusz).

2004-03-23 Olivier Mueller <om@omnis.ch>
    * server_privileges.php, libraries/server_privileges.js: added 
      (un)checkall links to the "Global privileges" edition form.
      Todo: make it work even if JS is disabled + local links
      for the "Data" and "Structure" checkboxes groups. 

2004-04-02 Alexander M. Turek  <me@derrabus.de>
    * lang/german-*.inc.php: Fixed a typo.

2004-04-01 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php: bug 922054, when there is no control user, the detection
      of the grants does not take into account all cases;
      thanks to Thomas ( jacob@internet24.de)

2004-03-30 Michal Cihar  <michal@cihar.com>
    * tbl_indexes.php: Use properly $cfg['PropertiesIconic']  (bug #918072).

2004-03-29 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: bug 923171, password error when copying a user
    * server_privileges.php: bug 923227, copying a user with table privs

2004-03-26 Marc Delisle  <lem9@users.sourceforge.net>